--- a/Substation Builder/Pages/DatabaseView/RelayPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/RelayPage.xaml
@@ -91,7 +91,14 @@
             <Label Content="Position:"/>
             <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayPosition}}}" SelectedValue="{Binding Position}"/>
         </DockPanel>
-
+        
+        <DockPanel>
+            <Label Content="Position:"/>
+            <Label Content="X:" Width="25" Margin="0,0,5,5"/>
+            <TextBox Text="{Binding X, StringFormat=\{0:F0\}}" KeyUp="TextBox_KeyEnterUpdate" Width="50"/>
+            <Label Content="Y:" Width="25" Margin="0,0,5,5"/>
+            <TextBox Text="{Binding Y, StringFormat=\{0:F0\}}" KeyUp="TextBox_KeyEnterUpdate" Width="50"/>
+        </DockPanel>
     </StackPanel>
 
 </UserControl>
